--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "flat-color-icons": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
