--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-id-generator": "^3.0.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.13",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
