--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
+    "emailjs": "^4.0.2",
     "flat-color-icons": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
