--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
-    "emailjs": "^4.0.2",
     "flat-color-icons": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
@@ -20,7 +19,6 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-id-generator": "^3.0.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.13",
@@ -39,7 +37,7 @@
     "workbox-streams": "^6.6.0"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
